<resources>
    <string name="app_name">UserCenter</string>

    <string name="account_enter_tip">请输入账号</string>
    <string name="password_enter_tip">请输入密码</string>
    <string name="login_top_title">以奋斗为本</string>
    <string name="login">登录</string>

    <string name="mine">我的</string>

    <string name="takeLookTask">带看任务</string>
    <string name="to_start">待开始</string>
    <string name="take_look">带看中</string>
    <string name="in_summary">总结中</string>
    <string name="under_review">审核中</string>
    <string name="finished">已完成</string>

    <string name="ranking">积分排行</string>
    <string name="Store_data">门店数据</string>
    <string name="Department_data">部门数据</string>
    <string name="Employee_data">员工数据</string>
    <string name="Integral_record">积分记录</string>

    <string name="corporateCulture">企业文化</string>
    <string name="BehavioralScore">行为分</string>

    <string name="system">系统相关</string>
    <string name="area_manager">区域管理</string>
    <string name="district_manager">学区管理</string>
    <string name="district_select">选择学区</string>
    <string name="log_manager">日志管理</string>
    <string name="address_book">通讯录</string>
    <string name="selectEmployees">选择员工</string>
    <string name="corporate_culture">企业文化</string>
    <string name="setting">设置</string>
    <string name="community_name_input">请输入小区名称</string>
    <string name="about_us">关于我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="logout">退出登录</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="logout_tip">确定要退出登录吗?</string>
    <string name="boystate">伯约地产</string>
    <string name="checkUpdate">检查更新</string>
    <string name="StaffInfo">员工信息</string>
    <string name="StaffName">员工姓名</string>
    <string name="Dept">部门</string>
    <string name="mobile">手机号</string>
    <string name="call_phone">打电话</string>
    <string name="chat">聊天</string>
    <string name="house_list">房源列表</string>

    <!--带看任务列表-->
    <string name="as_createUser">创建人</string>
    <string name="as_takeLookUser">带看人</string>
    <string name="as_AccompanyUser">陪看人</string>
    <string name="as_ManagerUser">管理层</string>

    <!--带看任务详情-->
    <string name="task_detail">任务详情</string>
    <string name="looktask_insert_house">新增带看房源</string>
    <string name="looktask_transfer">转让</string>
    <string name="looktask_cancel">取消</string>
    <string name="looktask_follow">带看跟进</string>
    <string name="looktask_AccompanyFollow">陪看跟进</string>
    <string name="looktask_Submit_review">提交审核</string>
    <string name="looktask_review">审核</string>
    <string name="sign">签到</string>
    <string name="unsigned">未签到</string>
    <string name="signed">已签到</string>
    <string name="signed_success">正常签到</string>
    <string name="signed_error">异常签到</string>
    <string name="task_cancel_dialog_title">确认取消?</string>
    <string name="task_cancel_dialog_content">一经取消无法找回，请慎重</string>
    <string name="task_sure">确认</string>
    <string name="task_cancel">取消</string>
    <string name="task_canceling">正在取消...</string>
    <string name="task_cancel_successful">取消成功</string>
    <string name="task_transfer_dialog_title">确认转让?</string>
    <string name="task_transfer_dialog_content">一经转让无法找回，请慎重</string>
    <string name="task_transferring">正在转让...</string>
    <string name="task_transfer_successful">转让成功</string>
    <!--带看跟进-->
    <string name="summary_follow">总结跟进</string>
    <string name="summary_follow_input">请输入 总结跟进</string>

    <!--新增带看房源-->
    <string name="insert_lookHouse_title">新增带看房源</string>
    <string name="lookHouse">带看房源</string>
    <string name="select_lookHouse">请选择 带看房源</string>
    <string name="AccompanyLook">陪看人</string>
    <string name="select_AccompanyLook">请选择 陪看人</string>
    <string name="insertHouse_follow">A跟进</string>
    <string name="follow_input">请输入A跟进</string>
    <string name="new_insert">新增</string>
    <string name="committing">正在提交...</string>
    <string name="commitSuccess">提交成功</string>

    <!--陪看跟进-->
    <string name="looktask_AccompanyFollow_input">请输入 陪看跟进</string>
   <!--带看任务审核-->
    <string name="LookTaskAudit">带看任务审核</string>
    <string name="isQualified">是否合格</string>
    <string name="select_isQualified">请选择 带看房源</string>

    <!--提交审核-->
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="prompt">提醒</string>
    <string name="commit_review_dialog_tip">是否提交审核</string>

    <string name="sign_input_tip">请先上传图标</string>

    <!--关于-->
    <string name="version_update">立即更新</string>
    <string name="appstore_deal_later">稍后再说</string>
    <string name="New_version_found">发现新版本</string>
    <string name="prompting">提醒</string>

</resources>
