<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/refreshTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:isShowBack="true"
        app:titleText="@string/setting" />

    <com.huihe.usercenter.ui.widget.MeItemView
        android:id="@+id/mIvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:title="@string/about_us"
        app:isShowLine ="true"/>
    <com.huihe.usercenter.ui.widget.MeItemView
        android:id="@+id/mIvClearCache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        app:meContent="0m"
        app:title="@string/clear_cache"
        app:isShowLine ="true"/>

    <TextView
        android:id="@+id/tvLogout"
        android:background="@drawable/common_maincolor_radius_bg"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:text="@string/logout"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_34"
        android:layout_marginBottom="@dimen/dp_24"
        android:layout_height="@dimen/dp_44"/>
</LinearLayout>