<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tip_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginLeft="20.5dp"
        android:layout_marginRight="@dimen/dp_12"
        android:text="@string/prompting"
        android:textStyle="bold"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_18"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20.5dp"
        android:id="@+id/dialog_tip_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginLeft="20.5dp"
        android:layout_marginRight="@dimen/dp_12"
        android:text="@string/logout_tip"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_16"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <LinearLayout
        android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_tip_cancel"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/common_line_radius_bg"
            android:textColor="@color/main_color"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"/>

        <TextView
            android:layout_marginLeft="@dimen/dp_24"
            android:id="@+id/dialog_tip_ok"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/common_maincolor_radius_bg"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"/>
    </LinearLayout>
</LinearLayout>