<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvSetImageUserPrompt"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/prompt"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/sp_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvSetImageUserTip"
        app:layout_constraintLeft_toLeftOf="@id/tvSetImageUserPrompt"
        app:layout_constraintTop_toBottomOf="@id/tvSetImageUserPrompt"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_18"
        android:drawablePadding="@dimen/dp_6"
        android:textSize="@dimen/sp_15"
        android:drawableLeft="@drawable/gantan"
        android:textColor="@color/color_666666"
        android:text="@string/commit_review_dialog_tip"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvYes"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSetImageUserTip"
        android:layout_width="@dimen/dp_40"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        android:gravity="center"
        android:background="@drawable/btn_common_pressed"
        android:layout_height="@dimen/dp_30"/>

    <TextView
        android:id="@+id/tvNo"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_24"
        app:layout_constraintRight_toLeftOf="@id/tvYes"
        app:layout_constraintTop_toBottomOf="@id/tvSetImageUserTip"
        android:layout_width="@dimen/dp_40"
        android:text="@string/no"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:background="@drawable/btn_common_unpressed"
        android:layout_height="@dimen/dp_30"/>

    <ImageView
        android:id="@+id/ivSetImageUserClose"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/eui_custom_close"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"/>
</androidx.constraintlayout.widget.ConstraintLayout>