<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/common_white"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvAccompanyTitle"
        android:text="@string/looktask_AccompanyFollow"
        android:layout_width="match_parent"
        android:textColor="@color/color_333333"
        android:gravity="center_vertical"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_height="@dimen/dp_40"/>
    <EditText
        android:id="@+id/etAccompanyContent"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:hint="@string/looktask_AccompanyFollow_input"
        android:gravity="left|top"
        android:padding="@dimen/dp_10"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/common_line_radius_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"/>

    <TextView
        android:id="@+id/tvAddAccompanyContent"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_44"
        android:gravity="center"
        android:textSize="@dimen/sp_15"
        android:text="@string/new_insert"
        android:textColor="@color/white"
        android:background="@drawable/common_maincolor_radius_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"/>

</LinearLayout>