<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kotlin.base.widgets.HeaderBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:isShowBack="true"
        app:titleText="@string/StaffInfo" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivDeptHead"
        android:layout_width="@dimen/dp_120"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/dp_120"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_34"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_333333"
            android:text="@string/StaffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ivDeptStaffName"
            android:layout_weight="1"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_999999"
            android:text="汇合"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_333333"
            android:text="@string/Dept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ivDeptName"
            android:layout_weight="1"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_999999"
            android:text="汇合"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/dp_16"
            android:layout_gravity="center_vertical"
            android:textColor="@color/color_333333"
            android:text="@string/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/ivDeptPhone"
            android:layout_weight="1"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_999999"
            android:text="139"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_24"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ivDeptCallPhone"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/call_phone"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/common_maincolor_radius_bg"
            android:layout_height="@dimen/dp_44"/>

        <TextView
            android:id="@+id/ivDeptChat"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:text="@string/chat"
            android:textSize="@dimen/sp_16"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/common_maincolor_radius_bg"
            android:layout_height="@dimen/dp_44"/>
    </LinearLayout>
</LinearLayout>