<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kotlin.base.widgets.HeaderBar
        android:id="@+id/refreshTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:isShowBack="true"
        app:titleText="@string/about_us" />

    <androidx.cardview.widget.CardView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_34"
        app:cardCornerRadius="@dimen/dp_16"
        app:cardElevation="@dimen/dp_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/app_icon"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:textSize="@dimen/dp_18"
        android:text="@string/boystate"
        android:layout_width="wrap_content"
        android:textColor="@color/color_333333"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvVersion"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/dp_16"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10"
        android:text="当前版本:1.0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_24"
        android:id="@+id/llCheckUpdate"
        android:layout_width="match_parent"
        android:background="@color/line"
        android:layout_height="@dimen/dp_44"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvCheckUpdateTitle"
            android:layout_gravity="center_vertical"
            android:text="@string/checkUpdate"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvServerVersion"
            android:text="1.0.0"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>